# ppms

./: .gitignore  .md  README.md  USAGE_GUIDE.md  bench_install.sh  pyproject.toml  report.md  requirements.txt  Пакетные_менеджеры.pptx
