[tool.poetry]
name = "dep-bench"
version = "0.1.0"
description = "Dependency manager benchmark"
authors = ["Test <test@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "*"
pandas = "*"
matplotlib = "*"
flask = "*"
requests = "*"
scikit-learn = "*"
sqlalchemy = "*"
jupyter = "*"
seaborn = "*"
tqdm = "*"
pillow = "*"
lxml = "*"
beautifulsoup4 = "*"
pytest = "*"
pydantic = "*" 